<resources>
    <string name="app_name">EscolarIntents</string>
    <string name="loginProfessor">CPF</string>
    <string name="passwordProfessor">Senha</string>
    <string name="btnLogin">Entrar</string>
    <string name="NomeProfessor">Nome</string>
    <string name="welcomeProfessor">Bem vindo!!</string>
    <string name="login2Professor">CPF:</string>
    <string name="nome2Professor">Nome:</string>
    <string name="password2Professor">Senha:</string>
    <string name="btnlistar">Ir para a Lista de Alunos</string>
    <string name="imgsplash"></string>
    <string name="img_aluno"></string>
    <string name="txt_aluno_nome">Nome: Felipe Augusto Rocha</string>
    <string name="txt_aluno_telefone">Telefone: (11) 99343-8399</string>
    <string name="txt_aluno_endereco">Endereço: Rua Persichitti</string>
    <string name="txt_aluno_email">Email: ffelipe@ambiente.sp.gov.br</string>
    <string name="txt_aluno_cep">CEP: 03373-105</string>
    <string name="txt_aluno_sexo">Sexo: Masculino</string>
    <string name="txt_aluno_cpf">CPF: 463.222.998-91</string>
    <string name="btn_aluno_email">Enviar Email</string>
    <string name="btn_aluno_telefone">Ligar</string>
    <string name="txt_ligar">993438399</string>
    <string name="btn_ligar">Ligar</string>
    <string name="btn_send">Enviar</string>
    <string name="txt_to">ffelipe@ambiente.sp.gov.br</string>
    <string name="txt_subject"></string>
    <string name="txt_message"></string>
    <string name="txtv_message">Mensagem:</string>
    <string name="txtv_to">Para:</string>
    <string name="txtv_subject">Assunto:</string>
    <string name="btn_getadress">Find my location</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_maps">Ver no Google Maps</string>
    <string name="txtv_nomeplace">Nome:</string>
    <string name="txtv_cpfplace">CPF:</string>
    <string name="txtv_senhaplace">Senha:</string>
    <string name="btn_note">Adicionar Anotação</string>
    <string name="txt_namenote">Título da Anotação</string>
    <string name="txt_descrinote">Digite a descrição da Anotação</string>
    <string name="edit_notetitle"></string>
    <string name="edit_notedescri"></string>
    <string name="btnsavenote">Salvar</string>
    <string name="btn_add_note">Adicionar</string>
    <string name="edit_add_title">Adicione o Titulo da Anotação</string>
    <string name="edit_add_descri">Adicione a Descrição da Anotação</string>
    <string name="btn_bd">Adicionar Anotação á base de dados</string>
</resources>