<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EmailActivity">

    <TextView
        android:id="@+id/txtv_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtv_to"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/txt_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_to"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:text="@string/txt_to" />

    <TextView
        android:id="@+id/txtv_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtv_subject"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/txt_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_subject"
        android:inputType="textEmailSubject"
        android:text="@string/txt_subject"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txtv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtv_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <EditText
        android:id="@+id/txt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="10"
        android:layout_gravity="start|top"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send" />
</LinearLayout>